--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,16 +1,35 @@
 .gallery {
-    margin-top: 30px;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1240px;
+}
+
+.gallery-title {
+    margin-bottom: 1rem;
+    /* font-weight: bold; */
 }
 
 .painting {
-    max-width: 300px;
+    border: 0px !important;
+    margin: 0 !important;
+}
+
+@media (min-width: 576px) {
+    .painting {
+        box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
+    }
 }
 
 .painting-title {
-    font-weight: bolder;
-    font-style: italic;
+    /* font-weight: bolder; */
 }
+
+.painting-subtitle {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
