--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 html {
     font-family: 'Open Sans', sans-serif;
     scroll-behavior: smooth;
