--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,10 +1,17 @@
-main {
-    margin-left: 350px;
+@media (min-width: 576px) {
+    main {
+        margin-left: 350px;
+    }
 }
 
 .main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 30px 0 30px;
+}
+
+@media (min-width: 576px) {
+    .main-container {
+        padding: 0 30px 0 30px;
+    }
 }
