--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,37 +1,43 @@
 .sidebar-container {
-    position: fixed;
     top: 0;
     left: 0;
     height: 100%;
-    width: 350px;
     background-color: darkslategray;
     color: lightgray;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 10px 30px 10px;
+    padding: 2rem 1rem 2rem 1rem;
+}
+
+@media (min-width: 576px) {
+    .sidebar-container {
+        width: 350px;
+        position: fixed;
+    }
 }
 
 .artist-portrait {
     border-radius: 50%;
+    margin-bottom: 1rem;
 }
 
-.menu-item-container {
-    padding: 5px 0 5px 0;
-    width: 100%;
-    text-align: center;
-}
-
-.menu-item-container:hover {
-    background-color: black;
+.artist-name {
+    margin-bottom: 1rem;
 }
 
 .menu-item {
+    display: block;
+    padding: .5rem 0 .5rem 0;
+    width: 100%;
+    text-align: center;
     color: inherit;
     text-decoration: inherit;
 }
 
 .menu-item:hover {
+    background-color: black;
     color: inherit;
     text-decoration: inherit;
 }
+
