--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -2,8 +2,8 @@
     top: 0;
     left: 0;
     height: 100%;
-    background-color: darkslategray;
-    color: lightgray;
+    background-color: #326b64;
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,18 +12,32 @@
 
 @media (min-width: 576px) {
     .sidebar-container {
-        width: 350px;
+        width: 450px;
         position: fixed;
     }
 }
 
-.artist-portrait {
-    border-radius: 50%;
-    margin-bottom: 1rem;
+.sidebar-container div {
+    margin-top: 1.5rem;
 }
 
-.artist-name {
-    margin-bottom: 1rem;
+.artist-portrait {
+    border-radius: 50%;
+}
+
+.artist-description ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.quote-text {
+    font-style: italic;
+    text-align: right;
+
+}
+
+.menu {
+    width: 100%;
 }
 
 .menu-item {
@@ -36,8 +50,7 @@
 }
 
 .menu-item:hover {
-    background-color: black;
+    background-color: #255E57;
     color: inherit;
     text-decoration: inherit;
 }
-
