--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -12,6 +12,10 @@
     }
 }
 
+.gallery-title {
+    margin-bottom: 1rem;
+}
+
 .gallery-paintings {   
     display: grid;   
     gap: 1em;   
@@ -25,6 +29,8 @@
     border: 0px;
     display: flex;
     flex-direction: column;
+    border-radius: 1rem;
+    max-width: 100vw;
 }
 
 @media (min-width: 576px) {
@@ -39,8 +45,7 @@
     padding: 1rem;
 }
 
-.gallery-title {
-    margin-bottom: 1rem;
+.painting-title {
     font-style: italic;
 }
 
