--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,28 +1,46 @@
-.sidebar-container {
+.sidebar {
     top: 0;
     left: 0;
     height: 100%;
-    background-color: #326b64;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 1rem 2rem 1rem;
 }
 
 @media (min-width: 576px) {
-    .sidebar-container {
+    .sidebar {
         width: 420px;
         position: fixed;
     }
 }
 
-.sidebar-container div {
+.banner {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 200px;
+    background-color: #cf5733;
+}
+
+.sidebar-container {
+    background-color: #326b64;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 120px 1rem 1rem 1rem;
+    min-height: 100%;
+}
+
+.artist-name {
     margin-top: 1.5rem;
 }
 
 .artist-portrait {
     border-radius: 50%;
+    border: 5px solid white;
+    margin-top: 0 !important;
+}
+
+.artist-description {
+    margin-top: 1.5rem;
 }
 
 .artist-description ul {
@@ -33,10 +51,11 @@
 .quote-text {
     font-style: italic;
     text-align: right;
-
+    margin-top: 1.5rem;
 }
 
 .menu {
+    margin-top: 1.5rem;
     width: 100%;
 }
 
