--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -2,6 +2,7 @@
     top: 0;
     left: 0;
     height: 100%;
+    overflow-y: auto;
 }
 
 @media (min-width: 576px) {
@@ -15,8 +16,8 @@
     position: absolute;
     overflow: hidden;
     width: 100%;
-    height: 200px;
-    background-color: #cf5733;
+    height: 180px;
+    background-color: #255E57;
 }
 
 .sidebar-container {
@@ -25,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 120px 1rem 1rem 1rem;
+    padding: 90px 1rem 1rem 1rem;
     min-height: 100%;
 }
 
@@ -35,8 +36,12 @@
 
 .artist-portrait {
     border-radius: 50%;
-    border: 5px solid white;
+    border: 5px solid #326b64;
     margin-top: 0 !important;
+}
+
+.gatsby-image-wrapper img {
+    border: 0;
 }
 
 .artist-description {
