--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -17,11 +17,12 @@
 }
 
 .gallery-paintings {   
-    display: grid;   
+    /* display: grid;   
     gap: 1em;   
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));   
-    grid-template-rows: masonry; 
-    max-width: 1240px;
+    grid-template-rows: masonry;  */
+    display: flex;
+    max-width: 1660px;
     width: 100%;
 }
 
@@ -35,6 +36,7 @@
 
 @media (min-width: 576px) {
     .painting {
+        margin: 0.5em;
         border: 1px;
         box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
     }
