--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,6 +1,6 @@
 .gallery {
     width: 100%;
-    padding-top: 1rem;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +8,7 @@
 
 @media (min-width: 576px) {
     .gallery {
-        padding: 1rem;
+        margin: 1rem;
     }
 }
 
