--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -26,8 +26,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 90px 1rem 1rem 1rem;
-    min-height: 100%;
+    padding: 0 1rem 1rem 1rem;
+    min-height: calc(calc(100% - 90px) - 1rem);
+    margin-top: 90px;
 }
 
 .artist-name {
