--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,61 +1,57 @@
 .gallery {
-    width: 100%;
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 576px) {
-    .gallery {
-        margin: 1rem;
-    }
+  .gallery {
+    margin: 1rem;
+  }
 }
 
 .gallery-title {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-.gallery-paintings {   
-    /* display: grid;   
+.gallery-paintings {
+  /* display: grid;   
     gap: 1em;   
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));   
     grid-template-rows: masonry;  */
-    display: flex;
-    max-width: 1660px;
-    width: 100%;
+  display: flex;
+  max-width: 1660px;
+  width: 100%;
 }
 
 .painting {
-    border: 0px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 1rem;
-    max-width: 100vw;
+  border: 0px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1rem;
+  max-width: 100vw;
 }
 
 @media (min-width: 576px) {
-    .painting {
-        margin: 0.5em;
-        border: 1px;
-        box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
-    }
+  .painting {
+    margin: 0.5em;
+    border: 1px;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  }
 }
 
-
 .painting-info {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .painting-title {
-    font-style: italic;
-    font-size: larger;
+  font-style: italic;
+  font-size: larger;
 }
 
 .painting-subtitle {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
-
-
-
