--- a/src/components/painting-modal.css
+++ b/src/components/painting-modal.css
@@ -1,17 +1,17 @@
 .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 1; 
-    /* padding-top: 100px;  */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: hidden; 
-    background-color: rgba(0,0,0,0.9); 
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  /* padding-top: 100px;  */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.9);
+}
 
 .modal-content {
   max-width: 80vw;
