--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,81 +1,81 @@
 .sidebar {
-    top: 0;
-    left: 0;
-    height: 100%;
-    overflow-y: auto;
+  top: 0;
+  left: 0;
+  height: 100%;
+  overflow-y: auto;
 }
 
 @media (min-width: 576px) {
-    .sidebar {
-        width: 420px;
-        position: fixed;
-    }
+  .sidebar {
+    width: 420px;
+    position: fixed;
+  }
 }
 
 .banner {
-    position: absolute;
-    overflow: hidden;
-    width: 100%;
-    height: 180px;
-    background-color: #255E57;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 180px;
+  background-color: #255e57;
 }
 
 .sidebar-container {
-    background-color: #326b64;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 1rem 1rem 1rem;
-    min-height: calc(calc(100% - 90px) - 1rem);
-    margin-top: 90px;
+  background-color: #326b64;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1rem 1rem 1rem;
+  min-height: calc(calc(100% - 90px) - 1rem);
+  margin-top: 90px;
 }
 
 .artist-name {
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .artist-portrait {
-    border-radius: 50%;
-    border: 5px solid #326b64;
-    margin-top: 0 !important;
+  border-radius: 50%;
+  border: 5px solid #326b64;
+  margin-top: 0 !important;
 }
 
 .gatsby-image-wrapper img {
-    border: 0;
+  border: 0;
 }
 
 .artist-description {
-    margin-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .artist-description ul {
-    list-style-type: none;
-    padding-left: 0;
+  list-style-type: none;
+  padding-left: 0;
 }
 
 .quote-text {
-    font-style: italic;
-    text-align: right;
-    margin-top: 1.5rem;
+  font-style: italic;
+  text-align: right;
+  margin-top: 1.5rem;
 }
 
 .menu {
-    margin-top: 1.5rem;
-    width: 100%;
+  margin-top: 1.5rem;
+  width: 100%;
 }
 
 .menu-item {
-    display: block;
-    padding: .5rem 0 .5rem 0;
-    width: 100%;
-    text-align: center;
-    color: inherit;
-    text-decoration: inherit;
+  display: block;
+  padding: 0.5rem 0 0.5rem 0;
+  width: 100%;
+  text-align: center;
+  color: inherit;
+  text-decoration: inherit;
 }
 
 .menu-item:hover {
-    background-color: #255E57;
-    color: inherit;
-    text-decoration: inherit;
+  background-color: #255e57;
+  color: inherit;
+  text-decoration: inherit;
 }
