--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,15 +1,10 @@
 .gallery {
-  width: 100%;
-  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-@media (min-width: 576px) {
-  .gallery {
-    margin: 1rem;
-  }
+  margin-top: 1rem;
+  width: 100%;
+  max-width: 1660px;
 }
 
 .gallery-title {
@@ -17,13 +12,22 @@
 }
 
 .gallery-paintings {
-  /* display: grid;   
-    gap: 1em;   
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));   
-    grid-template-rows: masonry;  */
-  display: flex;
-  max-width: 1660px;
+  display: grid;   
+  grid-template-columns: 1fr;
   width: 100%;
+}
+
+@media (min-width: 576px) {
+  .gallery-paintings {
+    gap: 1rem;   
+  }
+}
+
+@media (min-width: 860px) {
+  .gallery-paintings {
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));   
+    grid-template-rows: masonry; 
+  }
 }
 
 .painting {
@@ -31,12 +35,10 @@
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
-  max-width: 100vw;
 }
 
 @media (min-width: 576px) {
   .painting {
-    margin: 0.5em;
     border: 1px;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   }
@@ -49,9 +51,4 @@
 .painting-title {
   font-style: italic;
   font-size: larger;
-}
-
-.painting-subtitle {
-  display: flex;
-  justify-content: space-between;
 }
