--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,11 +1,11 @@
 @media (min-width: 576px) {
   main {
-    margin-left: 420px;
+    grid-column-start: 2;
+    margin: 0 1rem;
   }
 }
 
 .main-container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
