--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -15,6 +15,7 @@
 
 html {
   font-family: "Open Sans", sans-serif;
+  font-display: swap;
   scroll-behavior: smooth;
   font-size: larger;
   line-height: 1.15;
