--- a/src/components/painting-modal.css
+++ b/src/components/painting-modal.css
@@ -18,6 +18,30 @@
   }
 }
 
+.left {
+  z-index: 2;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.right {
+  z-index: 2;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
 .close {
   z-index: 2;
   cursor: pointer;
